Fix overlay and menu button mobile position

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   top: 0;
@@ -165,7 +165,11 @@ header {
     display: none;
     border: none;
     background: none;
+    position: fixed;
+    right: 6.5%;
+    top: 6.5%;
     z-index: 1;
+
     img {
       width: 40px;
     }
